--- a/newbie—Testimonials Slider/style.css
+++ b/newbie—Testimonials Slider/style.css
@@ -109,8 +109,10 @@ img {
 
 .buttons {
     position: absolute;
-        bottom: 50px;
-        left: 100px;
+        bottom: 20%;
+        left: 55%;
+    transform: translate3d(55%, 20%, 0);
+    z-index: 50;
     width: 90px;
     height: 45px;
     box-shadow: -20px 12px 20px 0px hsla(240, 18%, 77%, 0.52);
@@ -182,10 +184,13 @@ img {
     }
     
     .buttons {
-        bottom: 50px;
+        bottom: 45%;
         left: 30%;
-        transform: translateX(50%);
+        transform: translate3d(45%, 30%, 0);
     }
 
 }
 
+.slide-2 {
+    display: none;
+}
